feat: connection to battlenet accounts
added oauth flow, as well as connect and disconnect commands

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
 	"extends": "@sapphire/ts-config",
 	"compilerOptions": {
 		"rootDir": "src",
-		"outDir": "dist"
+		"outDir": "dist",
+		"noEmit": false
 	}
 }
