--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
 	"dependencies": {
 		"@prisma/client": "4.15.0",
 		"@sapphire/decorators": "^6.0.1",
+		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/framework": "^4.4.4",
 		"@sapphire/plugin-api": "^5.0.4",
 		"@sapphire/plugin-logger": "^3.0.4",
+		"@sapphire/time-utilities": "^1.7.9",
+		"@sapphire/timer-manager": "^1.0.0",
+		"@sapphire/utilities": "^3.12.0",
 		"colorette": "^2.0.20",
 		"discord.js": "^14.11.0",
-		"dotenv-cra": "^3.0.3"
+		"dotenv-cra": "^3.0.3",
+		"node-fetch": "^3.3.1",
+		"overwatch-api": "^0.13.0"
 	},
 	"devDependencies": {
 		"@sapphire/prettier-config": "^1.4.5",
 		"@sapphire/ts-config": "^4.0.0",
 		"@types/node": "^20.3.1",
+		"@types/node-fetch": "^2.6.4",
+		"@types/passport-bnet": "^2.0.2",
 		"dotenv-cli": "^7.2.1",
 		"eslint": "^8.42.0",
 		"husky": "^8.0.0",
@@ -40,6 +48,7 @@
 		"tunnel": "cloudflared access tcp --hostname postgres.jeschek.eu --url localhost:5432",
 		"prisma": "yarn prisma:dev",
 		"prisma:dev": "dotenv -e .env.development -- npx prisma",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"clean": "rm dist tsconfig.tsbuildinfo -r"
 	}
 }
