--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
 		"@sapphire/framework": "^4.4.4",
 		"@sapphire/plugin-api": "^5.0.4",
 		"@sapphire/plugin-logger": "^3.0.4",
+		"@sapphire/stopwatch": "^1.5.0",
 		"@sapphire/time-utilities": "^1.7.9",
 		"@sapphire/timer-manager": "^1.0.0",
 		"@sapphire/utilities": "^3.12.0",
 		"colorette": "^2.0.20",
 		"discord.js": "^14.11.0",
 		"dotenv-cra": "^3.0.3",
+		"memoizee": "^0.4.15",
 		"node-fetch": "^3.3.1",
-		"overwatch-api": "^0.13.0"
+		"node-vibrant": "^3.2.1-alpha.1",
+		"sharp": "^0.32.1"
 	},
 	"devDependencies": {
+		"@openapitools/openapi-generator-cli": "^2.6.0",
 		"@sapphire/prettier-config": "^1.4.5",
 		"@sapphire/ts-config": "^4.0.0",
+		"@types/memoizee": "^0.4.8",
 		"@types/node": "^20.3.1",
 		"@types/node-fetch": "^2.6.4",
 		"@types/passport-bnet": "^2.0.2",
@@ -49,6 +54,7 @@
 		"prisma": "yarn prisma:dev",
 		"prisma:dev": "dotenv -e .env.development -- npx prisma",
 		"prepare": "husky install",
-		"clean": "rm dist tsconfig.tsbuildinfo -r"
+		"clean": "rm dist tsconfig.tsbuildinfo -r",
+		"overfast": "./scripts/overfast.sh"
 	}
 }
