--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"dependencies": {
 		"@prisma/client": "4.15.0",
 		"@sapphire/decorators": "^6.0.1",
+		"@sapphire/duration": "^1.1.0",
 		"@sapphire/fetch": "^2.4.1",
 		"@sapphire/framework": "^4.4.4",
 		"@sapphire/plugin-api": "^5.0.4",
@@ -16,6 +17,7 @@
 		"@sapphire/stopwatch": "^1.5.0",
 		"@sapphire/time-utilities": "^1.7.9",
 		"@sapphire/timer-manager": "^1.0.0",
+		"@sapphire/type": "^2.4.0",
 		"@sapphire/utilities": "^3.12.0",
 		"colorette": "^2.0.20",
 		"discord.js": "^14.11.0",
