--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
 		"typescript": "^5.1.3"
 	},
 	"scripts": {
-		"build": "tsc --build .",
+		"build": "prisma generate && tsc --build .",
 		"dev": "tsc-watch --noClear --onSuccess \"node ./dist/index.js\"",
 		"start": "NODE_ENV=production node dist/index.js",
 		"format": "prettier --write .",
