--- a/package.json
+++ b/package.json
@@ -1,63 +1,67 @@
 {
-	"$schema": "https://json.schemastore.org/package.json",
-	"name": "bob",
-	"version": "1.0.0",
-	"main": "dist/index.js",
-	"repository": "https://www.github.com/joshuajeschek/bob",
-	"author": "Joshua Jeschek",
-	"license": "MIT",
-	"dependencies": {
-		"@prisma/client": "4.15.0",
-		"@sapphire/decorators": "^6.0.1",
-		"@sapphire/duration": "^1.1.0",
-		"@sapphire/fetch": "^2.4.1",
-		"@sapphire/framework": "^4.4.4",
-		"@sapphire/plugin-api": "^5.0.4",
-		"@sapphire/plugin-logger": "^3.0.4",
-		"@sapphire/stopwatch": "^1.5.0",
-		"@sapphire/time-utilities": "^1.7.9",
-		"@sapphire/timer-manager": "^1.0.0",
-		"@sapphire/type": "^2.4.0",
-		"@sapphire/utilities": "^3.12.0",
-		"colorette": "^2.0.20",
-		"discord.js": "^14.11.0",
-		"dotenv-cra": "^3.0.3",
-		"memoizee": "^0.4.15",
-		"node-fetch": "^3.3.1",
-		"node-vibrant": "^3.2.1-alpha.1",
-		"sharp": "^0.32.1"
-	},
-	"devDependencies": {
-		"@openapitools/openapi-generator-cli": "^2.6.0",
-		"@sapphire/prettier-config": "^1.4.5",
-		"@sapphire/ts-config": "^4.0.0",
-		"@types/memoizee": "^0.4.8",
-		"@types/node": "^20.3.1",
-		"@types/node-fetch": "^2.6.4",
-		"@types/passport-bnet": "^2.0.2",
-		"dotenv-cli": "^7.2.1",
-		"eslint": "^8.42.0",
-		"husky": "^8.0.0",
-		"npm-run-all": "^4.1.5",
-		"prettier": "^2.8.8",
-		"pretty-quick": "^3.1.3",
-		"prisma": "^4.15.0",
-		"ts-node": "^10.9.1",
-		"tsc-watch": "^6.0.4",
-		"typescript": "^5.1.3"
-	},
-	"scripts": {
-		"build": "prisma generate && tsc --build .",
-		"dev": "tsc-watch --noClear --onSuccess \"node ./dist/index.js\"",
-		"start": "NODE_ENV=production node dist/index.js",
-		"format": "prettier --write .",
-		"check-format": "prettier --check .",
-		"tunnel": "cloudflared access tcp --hostname postgres.jeschek.eu --url localhost:5432",
-		"prisma": "yarn prisma:dev",
-		"prisma:dev": "dotenv -e .env.development -- npx prisma",
-		"prisma:prod": "dotenv -e .env.production -- npx prisma",
-		"prepare": "husky install",
-		"clean": "rm dist tsconfig.tsbuildinfo -r",
-		"overfast": "./scripts/overfast.sh"
-	}
+  "$schema": "https://json.schemastore.org/package.json",
+  "name": "bob",
+  "version": "1.0.0",
+  "main": "dist/index.js",
+  "repository": "https://www.github.com/joshuajeschek/bob",
+  "author": "Joshua Jeschek",
+  "license": "MIT",
+  "dependencies": {
+    "@prisma/client": "5.5.0",
+    "@sapphire/decorators": "6.0.2",
+    "@sapphire/duration": "1.1.0",
+    "@sapphire/fetch": "2.4.1",
+    "@sapphire/framework": "4.7.2",
+    "@sapphire/plugin-api": "5.1.2",
+    "@sapphire/plugin-logger": "3.0.6",
+    "@sapphire/stopwatch": "1.5.0",
+    "@sapphire/time-utilities": "1.7.10",
+    "@sapphire/timer-manager": "1.0.0",
+    "@sapphire/type": "2.4.0",
+    "@sapphire/utilities": "3.13.0",
+    "colorette": "2.0.20",
+    "discord.js": "14.13.0",
+    "dotenv": "^16.3.1",
+    "dotenv-cra": "3.0.3",
+    "memoizee": "0.4.15",
+    "node-fetch": "3.3.2",
+    "node-vibrant": "3.2.1-alpha.1",
+    "sharp": "^0.32.6"
+  },
+  "devDependencies": {
+    "@openapitools/openapi-generator-cli": "2.7.0",
+    "@sapphire/prettier-config": "2.0.0",
+    "@sapphire/ts-config": "5.0.0",
+    "@types/memoizee": "0.4.10",
+    "@types/node": "20.8.8",
+    "@types/node-fetch": "2.6.7",
+    "@types/passport-bnet": "2.0.4",
+    "dotenv-cli": "7.3.0",
+    "eslint": "8.52.0",
+    "husky": "8.0.3",
+    "lint-staged": "^15.0.2",
+    "npm-run-all": "4.1.5",
+    "prettier": "3.0.3",
+    "prisma": "5.5.0",
+    "ts-node": "10.9.1",
+    "tsc-watch": "6.0.4",
+    "typescript": "5.2.2"
+  },
+  "scripts": {
+    "build": "prisma generate && tsc --build .",
+    "dev": "tsc-watch --noClear --onSuccess \"node ./dist/index.js\"",
+    "start": "NODE_ENV=production node dist/index.js",
+    "format": "prettier --write .",
+    "check-format": "prettier --check .",
+    "tunnel": "cloudflared access tcp --hostname postgres.jeschek.eu --url localhost:5432",
+    "prisma": "yarn prisma:dev",
+    "prisma:dev": "dotenv -e .env.development -- npx prisma",
+    "prisma:prod": "dotenv -e .env.production -- npx prisma",
+    "prepare": "husky install",
+    "clean": "rm dist tsconfig.tsbuildinfo -r",
+    "overfast": "./scripts/overfast.sh"
+  },
+  "lint-staged": {
+    "*.{js,json,ts,md}": "prettier --write"
+  }
 }
