--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,10 @@
 {
-	"$schema": "https://json.schemastore.org/tsconfig.json",
-	"extends": "@sapphire/ts-config",
-	"compilerOptions": {
-		"rootDir": "src",
-		"outDir": "dist",
-		"noEmit": false
-	}
+  "$schema": "https://json.schemastore.org/tsconfig.json",
+  "extends": "@sapphire/ts-config",
+  "compilerOptions": {
+    "rootDir": "src",
+    "outDir": "dist",
+    "noEmit": false,
+    "experimentalDecorators": true
+  }
 }
